# ishkarim-ui

./: .gitignore  CONTRIBUTING.md  LICENSE  MODULES.md  README.md  demo.py  pyproject.toml
benchmarks/: bench_ui.py
docs/: PROBLEMS.md  api.md  overview.md  sources.md
src/ishkarim_ui/: __init__.py  extracted.py  utils.py
src/ishkarim_ui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ishkarim_ui/snippets/: __init__.py  extracted.py
tests/: test_ui.py  test_ui_domain.py
