[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ishkarim-ui"
version = "0.1.0"
description = "Interfejsy terminalowe i semantyczne: Textual TUI, retro dashboardy, visual knowledge graphs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ishkarim", "ui", "local-ai", "cpu-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
rag   = ["sentence-transformers>=2.2"]
sqlite = ["sqlite-utils>=3.35"]
dev   = ["pytest>=7", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
